--- a/src/styles/globalVariables.scss
+++ b/src/styles/globalVariables.scss
@@ -7,7 +7,7 @@
     color: $color;
 }
 
-$BackGroundPrimary: #D1D2D4;
+$BackGroundPrimary: #E4E4E7;
 $ComponentBackGround: #F8F8F9;
 $ElementBackGround: #949599;
 $Font: #282828;
