--- a/src/components/pure/styles/pure.scss
+++ b/src/components/pure/styles/pure.scss
@@ -1,77 +1,48 @@
 @import "../../../styles/globalVariables.scss";
 
-.route-view {
+.route-link {
   display: flex;
-  margin: 2rem 0;
-  justify-content: space-between;
   align-items: center;
-  .route-link {
-    display: flex;
-    align-items: center;
-    gap: calc((4rem - 2rem) / 2);
-    @include transition(background);
-    &.active {
-      background: linear-gradient(
-        90deg,
-        $BackGroundPrimary 0%,
-        transparent 100%
-      );
-      .active-bar {
-        background-color: $InteractivePrimary;
-      }
-      .route {
-        color: $InteractivePrimary;
-      }
-    }
+  margin: 2rem 0;
+  gap: calc((4rem - 2rem) / 2);
+  @include transition(background);
+  &.active {
+    background: linear-gradient(90deg, $BackGroundPrimary 0%, transparent 100%);
     .active-bar {
-      height: 3rem;
-      width: 0.25rem;
-      border-radius: 0.125rem;
-      background-color: transparent;
-      @include transition(color);
+      background-color: $InteractivePrimary;
     }
     .route {
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-      text-align: left;
-      white-space: nowrap;
-      gap: 0.5rem;
-      width: 2.5rem;
-      color: $ElementBackGround;
-      transition: all 0.2s ease-in-out;
-      &.expanded {
-        width: 8rem;
-      }
-      &:hover {
-        color: $InteractivePrimary;
-      }
-      .label {
-        width: 0;
-        font-size: 1.1rem;
-        font-weight: 600;
-        @include transition(width);
-      }
-      .icon {
-        font-size: 2rem;
-      }
+      color: $InteractivePrimary;
     }
   }
-  .route-submenu {
-    opacity: 0;
-    @include transition(opacity);
-    &.expanded {
-      cursor: pointer;
-      opacity: 1;
-      .icon {
-        font-size: 1.25rem;
-        color: $ElementBackGround;
-        transition: all 0.2s ease-in-out;
-        &:hover {
-          color: $Font;
-          font-size: 1.4rem;
-        }
-      }
+  .active-bar {
+    height: 3rem;
+    width: 0.25rem;
+    border-radius: 0.125rem;
+    background-color: transparent;
+    @include transition(color);
+  }
+  .route {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    text-align: left;
+    white-space: nowrap;
+    gap: 0.5rem;
+    width: 2.5rem;
+    color: $ElementBackGround;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+      color: $InteractivePrimary;
+    }
+    .label {
+      width: 0;
+      font-size: 1.1rem;
+      font-weight: 600;
+      @include transition(width);
+    }
+    .icon {
+      font-size: 2rem;
     }
   }
 }
@@ -101,7 +72,7 @@
     font-size: 2rem;
     font-weight: 700;
     background-color: $ElementBackGround;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     &:hover {
       @include ButtonHover($ElementBackGround, $InteractiveSecondary);
     }
@@ -111,44 +82,129 @@
   }
 }
 
-.add-button{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color:$InteractiveSecondary;
-    color: $BackGroundPrimary;
-    border-radius: .5rem;
-    transition: all .2s ease-in-out;
-    &.large{
-        width: 10rem;
-        padding: .5rem .5rem;
-        font-weight: 500;
-        font-size: 1.15rem;
-        &:hover{
-            @include ButtonHover($ElementBackGround, $ElementBackGround);
-        }
+.add-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $InteractiveSecondary;
+  color: $BackGroundPrimary;
+  border-radius: 0.5rem;
+  transition: all 0.2s ease-in-out;
+  &.large {
+    width: 10rem;
+    padding: 0.5rem 1rem;
+    font-weight: 500;
+    font-size: 1.15rem;
+    &:hover {
+      @include ButtonHover($ElementBackGround, $ElementBackGround);
     }
+  }
 }
 
-.utility-button{
-    cursor: pointer;
-    &.large{
-        display: flex;
-        align-items: center;
-        font-size: 1.125rem;
-        gap: .75rem;
-        color: $Font;
-        .icon{
-            color: $ElementBackGround;
-        }
+.utility-button {
+  cursor: pointer;
+  &.large {
+    display: flex;
+    align-items: center;
+    font-size: 1.125rem;
+    gap: 0.75rem;
+    color: $Font;
+    .icon {
+      color: $ElementBackGround;
+    }
+  }
+  &.small {
+    font-size: 1.5rem;
+    @include transition(opacity);
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
 
+.due-date {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.3rem;
+  color: $Font;
+}
+
+.favorite-button {
+  color: $InteractiveComplementary;
+  cursor: pointer;
+  font-size: 1.5rem;
+  opacity: 0.8;
+  @include transition(opacity);
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.options-button {
+  cursor: pointer;
+  &.large {
+    font-size: 2rem;
+  }
+  &.small {
+    font-size: 1.5rem;
+  }
+}
+
+.progress {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  .bar {
+    position: relative;
+    width: 100%;
+    height: 0.375rem;
+    border-radius: 0.25rem;
+    background-color: $BackGroundPrimary;
+
+    .done {
+      position: absolute;
+      background-color: $InteractiveSecondary;
+      height: 0.375rem;
+      border-radius: 0.25rem;
     }
-    &.small{
-        font-size: 1.5rem;
-        @include transition(opacity);
-        &:hover{
-            opacity: .5;
-            
-        }
-    }
+  }
+}
+
+.priority-tag {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: fit-content;
+  gap: 0.5rem;
+  border-radius: 2rem;
+  color: $Font;
+  padding: 0.25rem 0.5rem;
+  &.low {
+    background-color: rgba(76, 175, 79, 0.5);
+  }
+  &.medium {
+    background-color: rgba(255, 193, 7, 0.5);
+  }
+  &.high {
+    background-color: rgba(244, 67, 54, 0.5);
+  }
+}
+
+.hamburger-button {
+  font-size: 2rem;
+  cursor: pointer;
+  color: $Font;
+  display: none;
+  @include transition(color);
+  &:hover {
+    color: $InteractivePrimary;
+  }
+}
+
+@media (max-width: 768px) {
+  .hamburger-button {
+    display: block;
+  }
 }
