--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,7 +21,21 @@ button{
   border: none;
 }
 
+li{
+  list-style: none;
+}
+
 .content{
   height: 100vh;
-  padding: 5rem 1rem 1rem 6rem;
+  padding: 5rem 2rem 2rem 7rem;
+  @include transition(blur);
+  &.blur{
+    filter: blur(1rem);
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding: 5rem .5rem .5rem .5rem;
+  }
 }
